<resources>
    <string name="app_name">Task Notifier</string>
    <string name="app_version">2.5.0</string>
    <string name="go_back">Go Back</string>
    <string name="enter_your_uid">Enter your UID</string>
    <string name="enter_your_mobile">Enter your Mobile no.</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_in_to_your_account">Sign in to your account!</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_as_student">Signin as student</string>
    <string name="signin_as_faculty">Signin as faculty</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="view_password">view password</string>
    <string name="hide_password">hide password</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="at">at</string>
    <string name="all">All</string>
    <string name="today_s">Today\'s</string>
    <string name="upcoming">Upcoming</string>
    <string name="ended">Ended</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">profile picture</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="greeting_text">Hello, %s</string>
    <string name="posted_by">Posted By - %s</string>
    <string name="last_updated">Last Updated - %s</string>
    <string name="event_date">Event Date - %s</string>
    <string name="event_timing">Event Timings - %s</string>
    <string name="event_venue">Venue - %s</string>

    <string name="event_details">Event Details</string>
    <string name="event_coordinators">Event Coordinators</string>
    <string name="registration_link">Registration Link - %s</string>
    <string name="additional_info">Additional Info</string>
    <string name="add_new_task">Add new task</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_event">Add Event</string>
    <string name="add_new_event">Add New Event</string>
    <string name="publish">Publish</string>
    <string name="follow_up_taken_by">Follow up taken by</string>
    <string name="responsible_person_action_taker">Responsible person/Action taker</string>
    <string name="type_of_task_work_activity">Type of Task/Work/Activity</string>
    <string name="name_of_task_work_activity">Name of Task/Work/Activity</string>
    <string name="task_planning_authority">Task planning authority</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_time">Event Time</string>
    <string name="venue">Venue</string>
    <string name="you_don_t_have_any_events">You don\'t have any events</string>
    <string name="add_description">Add description</string>
    <string name="registration_link_form">Registration link</string>
    <string name="edit_event">Edit event</string>
    <string name="update_event">Update Event</string>
    <string name="let_s_sign_you_in">Let\'s sign you in.</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back! You\'ve been missed.</string>
    <string name="view_all">View All</string>
    <string name="my_tasks">My Tasks</string>
    <string name="not_complete">Not Complete</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="tasks_date">%s - %s</string>
    <string name="you_don_t_have_any_tasks">You don\'t have any tasks.</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="you_don_t_have_any_notifications">You don\'t have any notifications!</string>
    <string name="task_plan_authority">Task Plan Authority - %s</string>
    <string name="action_taker">Action Taker - %s</string>
    <string name="follow_up">Follow Up Taken By - %s</string>
    <string name="department_task">Department - %s</string>
    <string name="task_added_by">Added By - %s</string>
    <string name="task_status">Status - %s</string>
    <string name="delay">*Reason for Change - %s</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="save_changes">Save Changes</string>
    <string name="please_specify_a_reason_for_change_in_this_task_not_mandatory">*please specify a reason for change in this task (not mandatory)</string>
    <string name="sort">Sort by</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="added_by_me">Added by Me</string>
    <string name="all_tasks">All Tasks</string>
    <string name="filter">Filter</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_designation">Enter your Designation</string>
    <string name="welcome_create_a_new_account">Welcome! Create a new account.</string>
    <string name="enter_your_department">Enter your Department</string>
    <string name="password">Password</string>
    <string name="user_designation">Designation</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="reason_of_delay">Reason of Delay</string>
    <string name="prefix">Prefix</string>
    <string name="task_change_requests">Task Change Requests</string>
    <string name="s_wants_to_modify_s_task">%s wants to modify \'%s\' task.</string>
    <string name="reason_for_change_s">Reason for change : %s</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="download_data">Download Data</string>
    <string name="my_profile">My Profile</string>
    <string name="added_tasks">Added Tasks</string>
    <string name="tasks">Tasks</string>
</resources>