<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/nav_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/events_page"
        android:enabled="true"
        android:icon="@drawable/nav_view_list_24"
        android:title="@string/events"/>

    <item
        android:id="@+id/notifications_page"
        android:enabled="true"
        android:icon="@drawable/nav_notifications_24"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/settings_page"
        android:enabled="true"
        android:icon="@drawable/nav_settings_24"
        android:title="@string/settings"/>

</menu>