<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_sign_you_in"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="44dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/welcome_create_a_new_account"
            android:layout_marginTop="4dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="14sp"
            android:padding="16dp"
            android:drawableStart="@drawable/icon_phone"
            android:drawableTint="?attr/colorControlNormal"
            android:drawablePadding="14dp"
            android:layout_below="@id/subtitle"
            android:layout_marginTop="32dp"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_below="@id/editTextMobile"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/editTextNamePrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prefix"
                android:inputType="text"
                android:textSize="14sp"
                android:padding="16dp"
                android:drawableStart="@drawable/sign_in_user"
                android:drawableTint="?attr/colorControlNormal"
                android:drawablePadding="14dp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="14sp"
                android:padding="18dp"
                tools:ignore="Autofill" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <AutoCompleteTextView
            android:id="@+id/editTextDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department"
            android:inputType="text"
            android:textSize="14sp"
            android:padding="16dp"
            android:drawableStart="@drawable/icon_department"
            android:drawableTint="?attr/colorControlNormal"
            android:drawablePadding="14dp"
            android:layout_below="@id/linearLayout"
            android:layout_marginTop="16dp"/>

        <AutoCompleteTextView
            android:id="@+id/editTextDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_designation"
            android:inputType="text"
            android:textSize="14sp"
            android:padding="16dp"
            android:drawableStart="@drawable/icon_work"
            android:drawableTint="?attr/colorControlNormal"
            android:drawablePadding="14dp"
            android:layout_below="@id/editTextDepartment"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="14sp"
            android:padding="16dp"
            android:drawableStart="@drawable/sign_in_lock"
            android:drawableTint="?attr/colorControlNormal"
            android:drawablePadding="14dp"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:layout_below="@id/editTextDesignation"/>

        <ImageButton
            android:id="@+id/password_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_in_eye"
            android:padding="14dp"
            android:background="#00ffffff"
            android:layout_alignEnd="@+id/editTextPassword"
            android:layout_alignTop="@+id/editTextPassword"
            android:layout_alignBottom="@+id/editTextPassword"
            android:contentDescription="@string/view_password"
            app:tint="?attr/colorControlNormal" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:padding="14dp"
            android:layout_below="@id/editTextPassword"
            android:contentDescription="@string/sign_in"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginStart="4dp"
                android:textColor="?attr/colorPrimary"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</layout>