<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:src="@drawable/icon_arrow_back"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/go_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_to_your_account"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="24dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="34dp"/>

                <LinearLayout
                    android:id="@+id/choice_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_title"
                    android:layout_marginHorizontal="24dp"
                    android:padding="1dp"
                    android:background="@drawable/button_border_normal"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:id="@+id/btn_student"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/student"
                        android:textSize="14sp"
                        android:padding="12dp"
                        android:background="@drawable/button_border_active"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:contentDescription="@string/signin_as_student"/>

                    <TextView
                        android:id="@+id/btn_faculty"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/faculty"
                        android:textSize="14sp"
                        android:padding="12dp"
                        android:textAlignment="center"
                        android:contentDescription="@string/signin_as_faculty"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/uid"
                    android:hint="@string/enter_your_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="14sp"
                    android:drawableStart="@drawable/sign_in_user"
                    android:drawablePadding="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/choice_buttons"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:padding="16dp"
                    android:background="@color/secondary"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:maxLength="16"
                    android:drawableStart="@drawable/sign_in_lock"
                    android:drawableEnd="@drawable/sign_in_eye"
                    android:drawablePadding="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/uid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="12dp"
                    android:padding="16dp"
                    android:background="@color/secondary"
                    android:importantForAutofill="no" />

                <ImageButton
                    android:id="@+id/password_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sign_in_eye"
                    android:backgroundTint="@color/secondary"
                    android:padding="14dp"
                    app:layout_constraintTop_toTopOf="@id/password"
                    app:layout_constraintEnd_toEndOf="@id/password"
                    app:layout_constraintBottom_toBottomOf="@id/password"
                    android:contentDescription="@string/view_password" />

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="24dp"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:padding="12dp"
                    android:contentDescription="@string/sign_in"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/primary"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>