<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userObject"
            type="com.example.bfgiactivitynotifier.models.UserModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.profile.ProfileActivity"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/icon_arrow_back"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/go_back"
                android:backgroundTint="#00ffffff"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/back_button"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:src="@drawable/default_profile"
            android:layout_marginVertical="24dp"
            tools:ignore="ContentDescription"
            android:layout_gravity="center_horizontal"/>

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginHorizontal="20dp"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/name"
               android:textSize="13sp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@{userObject.full_name}"
               android:textSize="16sp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email"
               android:textSize="13sp"
               android:layout_marginTop="8dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@{userObject.user_id}"
               android:textSize="16sp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/designation"
               android:textSize="13sp"
               android:layout_marginTop="8dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@{userObject.designation}"
               android:textSize="16sp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/department"
               android:textSize="13sp"
               android:layout_marginTop="8dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@{userObject.department}"
               android:textSize="16sp"/>

       </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>